--- a/what.html
+++ b/what.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title>Template</title>
+		<title>Minimum Wage Jobs</title>
 		<link rel="stylesheet" href="what.css">
 	</head>
 	<body>
 		<div id="page">
-			<h1>Hello, world!</h1>
+			<h1>Working for Ripley</h1>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				I never thought I'd find myself cleaning the severed head of a serial killer but then I realized that college was expensive and my employment options were limited.  Had I know when I took my job at the museum that, for $7.25 an hour, I would be expected to deal with violent drunks and crying children both regularly wetting their pants in the museum I might have turned it down. Had I known that I was required to get this up close and personal to Peter Kurten I most definitely would have turned it down. I knew he was harmless; he hadn't murdered or brutally sexually assaulted anyone in over 85 years. But as his head slowly rotated in its plexiglass case I came to the conclusion that I hated the Ripley's Believe It or Not Museum. Every child who left greasy fingerprints on the two-headed sheep, every drunk who tried to pry out the gravestones on the second floor balcony, every teenager who tried to make out after hours in the iron maiden. I hated the fact that, at that moment, the late, not-so-great Vampire of Dusseldorf's head was slowly rocking back and forth in time with my vigorous scrubbing. I hated that it was midnight and I was alone in a museum of dead people and supposedly haunted artifacts.  But most of all I hated that I was so exhausted and jaded from dealing with tourists that I was no longer scared or fascinated by anything in the museum.  Some of the employees swore up and down that there were ghosts in the museum.  I was too tired to care one way or the other and any ghosts who might have set out to haunt me probably picked up on that. It's true, I never thought I would be cleaning the severed head of a serial killer. But I definitely never thought that I could be bored while doing it. Yet when I look back at that experience I don't think about the severed heads or giant bugs. All I remember is the soul killing monotony and Peter's stupid suspended head.
 			</p>
 		</div>
 	</body>
